--- a/package.json
+++ b/package.json
@@ -14,14 +14,19 @@
   "license": "ISC",
   "devDependencies": {
     "@types/leaflet": "^1.9.6",
+    "@types/node": "^20.8.4",
+    "dotenv": "^16.3.1",
+    "dotenv-webpack": "^8.0.1",
     "ts-loader": "^9.5.0",
     "typescript": "^5.2.2",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "dotenv": "^16.3.1",
     "envalid": "^8.0.0",
+    "leaflet": "^1.9.4",
+    "path": "^0.12.7",
+    "process": "^0.11.10",
     "webpack-dev-server": "^4.15.1"
   }
 }
